# up-bank-pyclient

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
tests/: test_models.py
upbank/: client.py
upbank/models/: account.py  base.py  category.py  transaction.py  webhook.py
