[project]
name = "up-bank-pyclient"
version = "0.1.0"
description = "Python client library for the UP Bank API"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jack Munro", email = "jack@jsmunro.me" },
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "dotenv>=0.9.9",
]
